--- a/amigo-stats 2/package.json
+++ b/amigo-stats 2/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Painel administrativo para gerenciamento de jogadores de futebol",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
@@ -35,6 +36,10 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
