--- a/amigo-stats 2/package.json
+++ b/amigo-stats 2/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Painel administrativo para gerenciamento de jogadores de futebol",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
